FullQa New/src/objects/DFR_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOL__c</fullName>
        <label>EOL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <label>MQL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQO__c</fullName>
        <label>MQO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQL__c</fullName>
        <label>PQL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <label>Prospect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working__c</fullName>
        <label>Working</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DFR Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Prospect__c</columns>
        <columns>PQL__c</columns>
        <columns>MQL__c</columns>
        <columns>Working__c</columns>
        <columns>MQO__c</columns>
        <columns>EOL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>